2011-11-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_agents.php: Fixed call to agents_get_modules
	with id_agent = 0.

2011-11-30  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/estado_agente.php: Fixed pagination transfer
	from form in the operation agents view

2011-11-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_agents.php: Fixed bad sql sintax in 
	agents_get_agents function.

2011-11-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_agents.php: Fixed bad sql sintax in 
	agents_get_agents funtion.
	
	Fixes: #3445995

2011-11-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/estado_generalagente.php
	include/javascript/jquery.ui.dialog.js
	general/header.php: Fixed ui_dialog when graphs are displayed 
	behind.
	
	Fixes: #3441058

2011-11-30  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_gd.php: Fixed rounded corners 
	progress bar whit mode=1 and ratio < 30

2011-11-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/ajax/agent.php
	operation/agentes/exportdata.php: Fixed agent autocomplete 
	functionality.

2011-11-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_reporting.php: Fixed html render of combined 
	graphs.

2011-11-30  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_edit_modules.php: Fixed massive
	module edition to not break module group, export id etc 
	when edit another field

2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* install.php: Fixed width style in step 2.
	
	Fixes: #3421097

2011-11-29  Sergio Martin <sergio.martin@artica.es>

	* include/functions_agents.php: Fixed filter of the operation
	agents view for bug 3445244

2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	include/functions_graph.php: Fixed PDF exportation of combined 
	graphs.

2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
